fixed checkmark alignment

--- a/blocks/header/exl-header.scss
+++ b/blocks/header/exl-header.scss
@@ -327,6 +327,7 @@
   height: 32px;
   line-height: 15px;
   text-align: right;
+  margin: 0;
 
   &::after {
     @include chevron;
@@ -473,6 +474,8 @@ button > .search-picker-label {
   width: 28px;
   left: 8px;
   top: 4px;
+  display: flex;
+  align-items: center;
 }
 
 .search-picker-popover .search-picker-label .icon path,
